--- a/html/subfolder/index.html
+++ b/html/subfolder/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
       <title> a test page in a subfolder </title>
+      <!-- the following meta enables device customizable viewing of the page -->
+      <meta name="viewport" content="initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0, width=device-width" />
 </head>
 
 <body>
