--- a/html/index.html
+++ b/html/index.html
@@ -123,6 +123,19 @@
       </p>
 
       <h1>Part 5: Tables</h1>
+      <p> an example table:
+            <table>
+                  <tr> <th>(top-left corner cell)</th> <th scope="col">col-1</th> <th scope="col">col-2</th> <th scope="col">col-3</th></tr>
+                  <tr> <th scope="row">row-1</th>  <td>A</td> <td>B</td> <td>C</td> </tr>
+                  <tr> <th scope="row">row-2</th>  <td>D</td> <td>E</td> <td rowspan="2">F(row-2&3)</td> </tr>
+                  <tr> <th scope="row">row-3</th>  <td colspan="2"> G(col-1&2) </td> </tr>
+                        
+            </table>
+      </p>
+
+
+
+
 
       <hr/>
       <p id="bottom">
