--- a/html/subfolder/index.html
+++ b/html/subfolder/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-      <title> a test page in a subfolder </title>
+      <title> a page in a subfolder </title>
       <!-- the following meta enables device customizable viewing of the page -->
       <meta name="viewport" content="initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0, width=device-width" />
 </head>
 
 <body>
       <h1> a test page in a subfolder</h1>
-      <p> a <a href="../index.html">link</a> going back to the root
+      <p> a <a href="../index.html">link</a> going back to the root page, at the proper place
       </p>
 </body>
 
