--- a/resume-html/index.html
+++ b/resume-html/index.html
@@ -175,13 +175,17 @@
             <li>Numerical analysis and modelling </li>
             </ul>
       <h3>Demo Codes</h3>   
-            <p><a href="">A Python module</a> for optical simulaton of one-dimensional random photonic structures 
-                  (only API's and demo applications are shown, source code is yet private).</p>
-            <p> 
+            <ul>
+            <li><a href="">A Python module</a> for optical simulaton of one-dimensional random photonic structures 
+                  (only API's and demo applications are shown, source code is yet private).
+            </li> 
+            <li>
             <a href="http://nbviewer.ipython.org/github/chaohan/code-samples/tree/master/fortran/">
             Fortran program</a> for numerical vibrational wave packet propagation in hydrogen cation
             molecules under femtosecond strong-intensity photoexcitation.
-            </p>
+            </li>
+            
+            </ul>
       </div>
     </div>
       
